--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "helmet": "^7.1.0",
     "express-rate-limit": "^7.1.5",
     "@aws-sdk/client-bedrock-runtime": "^3.490.0",
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.490.0",
+    "@aws-sdk/client-bedrock-agent": "^3.490.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.490.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
